# ifc-mcp

./: .env.example  Dockerfile  README.md  README_INTEGRATION.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/ifc_mcp/: __init__.py  main.py
src/ifc_mcp/application/: __init__.py
src/ifc_mcp/application/services/: __init__.py  accessibility_check_service.py  din277_service.py  fire_compartment_service.py  fire_escape_plan_service.py  fire_symbols.py  gaeb_service.py  material_takeoff_service.py  model_check_service.py  svg_generator.py  woflv_service.py
src/ifc_mcp/domain/: __init__.py  exceptions.py
src/ifc_mcp/domain/models/: __init__.py  element.py  project.py  space.py
src/ifc_mcp/domain/repositories/: __init__.py
src/ifc_mcp/domain/value_objects/: __init__.py  ex_zone.py  fire_rating.py  global_id.py
src/ifc_mcp/infrastructure/: __init__.py
src/ifc_mcp/infrastructure/database/: __init__.py  connection.py  models.py
src/ifc_mcp/infrastructure/di/: __init__.py  container.py
src/ifc_mcp/infrastructure/ifc/: __init__.py  import_service.py  parser.py
src/ifc_mcp/infrastructure/repositories/: __init__.py  element_repository.py  project_repository.py  space_repository.py  storey_repository.py  unit_of_work.py
src/ifc_mcp/presentation/: __init__.py  server.py
src/ifc_mcp/presentation/api/: app.py
src/ifc_mcp/presentation/api/routes/: __init__.py  ex_protection.py  german_standards.py  projects.py
src/ifc_mcp/presentation/tools/: __init__.py  analysis_tools.py  ex_protection_tools.py  export_tools.py  fire_plan_tools.py  project_tools.py  schedule_tools.py
src/ifc_mcp/shared/: __init__.py  config.py  logging.py  result.py
tests/: __init__.py  conftest.py
tests/unit/: test_value_objects.py
